--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,26 @@
-bin_PROGRAMS = main
-main_SOURCES = main.cpp Color.cpp PointSet.cpp Vertex.cpp Image.cpp Image.h
-
+# additional include paths necessary to compile the C++ programs
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/../external
-#lib_LIBRARIES = main.a 
-#libfoo_a_SOURCES = foo.c privfoo.h
-#libbar_a_SOURCES = bar.c privbar.h
-#include_HEADERS = foo.h bar.h
+
+###############################################################################
+# THE PROGRAMS TO BUILD
+###############################################################################
+
+bin_PROGRAMS = main
+main_header = \
+		Color.h    \
+		Image.h	   \
+		PlyFile.h  \
+		PointSet.h \
+		Vec3D.hpp  \
+		Vertex.h    
+main_libray = \
+		Color.cpp    \
+		PointSet.cpp \
+		Vertex.cpp   \
+		Image.cpp
+
+main_SOURCES = \
+		$(main_header) \
+		$(main_libray) \
+		main.cpp 
+
