--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ CXXFLAGS=
 CFLAGS=
 LDFLAGS=
 
-#AC_CONFIG_COMMANDS([mkdir], [$MKDIR_P build src/bin])
+AC_CONFIG_COMMANDS([mkdir], [$MKDIR_P bin bin/CapturedFrames])
 
 # Checks for programs.
 AC_PROG_AWK
