--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+/bin/.dirstamp
+/bin/main
+/depcomp
+/install-sh
+/missing
+/src/PROGcorr01
+/src/PROGcorr10
+/src/PROGdiff01
+/src/PROGdiff10
 VS2010/
 VS2012/
 bee11/
