--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ AM_CXXFLAGS=-D__DEBUG_PLY_READ
 else
 AM_CFLAGS=-O3 -msse2
 AM_CXXFLAGS=-O3 -msse2
-AM_CPPFLAGS=-O3 -DNDEBUG
+AM_CPPFLAGS=-O3 -DNDEBUG -fopenmp
 endif
 AM_LDFLAGS=-lm -lglut
 
