--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_PROG_LN_S
 AC_PROG_RANLIB
 
 # Check for libraries 
-PKG_CHECK_MODULES(OPENCV,opencv)
+#PKG_CHECK_MODULES(OPENCV,opencv)
 PKG_CHECK_MODULES(OPENNI,openni)
 PKG_CHECK_MODULES(GLU,glu)
 PKG_CHECK_MODULES(GLU,gl)
